# tibet-hermes

./: .gitignore  README.md  pyproject.toml
src/tibet_hermes/: __init__.py  installer.py
src/tibet_hermes/discovery/: __init__.py  ains_skills.py
src/tibet_hermes/memory_provider/: __init__.py  provider.py
src/tibet_hermes/skill/: SKILL.md
tests/: test_discovery.py  test_installer.py  test_memory_provider.py
