[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-hermes"
version = "0.1.2"
description = "TIBET trust layer for Hermes Agent — cryptographic provenance, sealed memory, .aint skill discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.com" },
    { name = "Root AI", email = "root_idd@humotica.nl" },
]
keywords = [
    "tibet", "hermes", "hermes-agent", "provenance", "trust",
    "ai-agent", "memory", "skill-discovery", "ainternet", "idd",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "jis-core>=0.4.0",
    "tibet-core>=0.5.0",
    "tibet>=2.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["tibet-ainternet-mcp>=0.7"]
full = ["tibet-ainternet-mcp>=0.7", "tibet-vault>=0.1"]

[project.urls]
Homepage = "https://ainternet.org"
Repository = "https://github.com/Humotica/tibet-hermes"
Documentation = "https://docs.ainternet.org/tibet-hermes"

[project.scripts]
tibet-hermes-install = "tibet_hermes.installer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_hermes"]
